--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "eslint": "^4.9.0"
-  },
-  "devDependencies": {
-    "mocha": "^4.0.1"
-  },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -21,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/cawa-93/anime-bot/issues"
   },
-  "homepage": "https://github.com/cawa-93/anime-bot#readme"
+  "homepage": "https://github.com/cawa-93/anime-bot#readme",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "eslint": "^4.9.0",
+    "mocha": "^4.0.1"
+  }
 }
