--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "url": "https://github.com/cawa-93/anime-bot/issues"
   },
   "homepage": "https://github.com/cawa-93/anime-bot#readme",
-  "dependencies": {},
+  "dependencies": {
+    "xregexp": "^3.2.0"
+  },
   "devDependencies": {
     "eslint": "^4.9.0",
     "husky": "^0.14.3",
